// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render caption text with example Farsi offscreen text 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  font-size: 1.0625rem;
  line-height: 1.5rem;
  color: #6E6E73;
  font-family: NassimPersian,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c0 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 > p:last-child {
  padding-bottom: 0;
}

.c0 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 0.5rem 0 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
     ، عنوان
  </span>
  <p>
    Some caption text...
  </p>
</figcaption>
`;

exports[`should render caption text with example News offscreen text 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #6E6E73;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c0 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 > p:last-child {
  padding-bottom: 0;
}

.c0 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 0.5rem 0 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
    Caption, 
  </span>
  <p>
    Some caption text...
  </p>
</figcaption>
`;

exports[`should render caption with mutiple paragraphs 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #6E6E73;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c0 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 > p:last-child {
  padding-bottom: 0;
}

.c0 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 0.5rem 0 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
    Caption, 
  </span>
  <p>
    This is paragraph 1
  </p>
  <p>
    This is paragraph 2
  </p>
  <p>
    Paragraph 3
  </p>
</figcaption>
`;
